--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,10 @@
-* {
-    display: block;
+body {
+    overflow-x: hidden;
+}
+
+@font-face {
+    font-family: 'whisper';
+    src: url(../font/whisper-nature/Whisper\ Nature.ttf) format("truetype");
 }
 
 /*Start Navbar*/
@@ -23,7 +28,8 @@
 
 .companyName {
     color: white;
-    font-weight: 300;
+    font-weight: 400;
+    font-size: 35pt;
 }
 
 
@@ -31,7 +37,8 @@
 
 /*Start Content*/
 
-.mainContainer {
+/*Start Hello Screen*/
+.firstContainer {
     position: relative;
      z-index: 0;
      top: -115px;
@@ -48,6 +55,11 @@
     text-align: center;
     font-weight: 100;
 
+
+}
+.content h1:nth-child(2) {
+    font-size: 50pt;
+    font-family: 'whisper';
 }
 
 .content h3 {
@@ -57,11 +69,13 @@
 }
 
 #companyNameContent {
-    color: green;
+    color: rgb(3, 198, 3);
 }
 
 
 .buttonBuy {
+    position: relative;
+    top: 30px;
     padding: 12.5px 30px;
     border: 0;
     border-radius: 100px;
@@ -86,3 +100,36 @@
    
     transform: scale(1);
   }
+
+  /*End Hello Screen*/
+
+  /*Start E-commerce*/
+
+  .secondContainer {
+    position: relative;
+    bottom: 120px;
+    height: 100vh;
+    background-color: #fefefe;
+  }
+
+  .plant {
+    position: relative;
+    right: 30px;
+    width: 200px;
+    rotate: 230deg;
+    bottom: 20px;
+    float: right;
+    z-index: 10;
+  }
+
+  .checking {
+    position: relative;
+    left: 50%;
+    bottom: 55px;
+    transform: translate(-50%);
+    width: 70%;
+    height: 16%;
+    background-color: #DAF1CD;
+  }
+
+  
